fix: resolve scrollbar issues + time visualization

--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -55,8 +55,15 @@ svg {
 .flex-font {
     width: 100%;
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .flex-font::-webkit-scrollbar,
